# rust-osc-types

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-osc-types10.yml  publish-osc-types11.yml
osc-codec10/: Cargo.toml  LICENSE-APACHE  README.md
osc-codec10/examples/: recv_udp.rs  send_udp.rs
osc-codec10/src/: lib.rs
osc-codec10/tests/: bundle_address_edge_cases.rs  codec_tests.rs  nested_bundle_tests.rs
osc-types-core/: Cargo.toml  README.md
osc-types-core/src/: lib.rs
osc-types10/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
osc-types10/src/: lib.rs
osc-types11/: CHANGELOG.md  Cargo.toml  README.md
osc-types11/src/: lib.rs
