[package]
name = "osc-codec10"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minimal, zero-copy-leaning OSC 1.0 encoder/decoder for osc-types10"
repository = "https://github.com/Nagitch/rust-osc-types"
readme = "README.md"
keywords = ["osc", "open-sound-control", "audio", "protocol"]
categories = ["encoding", "parsing", "network-programming"]

[dependencies]
# Use the published version
osc-types10 = { version = "0.1.0-alpha.2" }
byteorder = { version = "1", default-features = false }

[features]
default = ["std"]
# std feature enables std-only demos; core/alloc path remains available without it.
std = []
# for no_std + alloc builds turn off default features: --no-default-features --features alloc
alloc = []
