[package]
name = "osc-types11"
version = "0.1.0-alpha.2"
edition = "2021"
rust-version = "1.70"
description = "Open Sound Control (OSC 1.1) message and bundle types. (no_std optional)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nagitch/rust-osc-types"
readme = "README.md"
keywords = ["osc", "audio", "protocol", "messaging"]
categories = ["network-programming", "encoding", "parsing"]
include = ["Cargo.toml", "LICENSE*", "README.md", "src/**"]

[dependencies]
osc-types10 = { version = "=0.1.0-alpha.2" }

[features]
default = ["std"]
std = []
no_std = []
unstable = []

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
all-features = true
